// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: AssignToListItem component should render correct layout if markup is null 1`] = `
<AssignToListItemstyles__ListItemWrapper>
  <AssignToListItemstyles__ListItemHeader>
    <span />
    <AssignToListItemstyles__ListItemTitle>
      <FieldsToAssignstyles__StyledTextHighlighter
        searchTerm="mockFilter"
        text="name"
      />
    </AssignToListItemstyles__ListItemTitle>
    <AssignToListItemstyles__StyledButton
      onClick={[Function]}
      type="link"
    >
      + Add new
    </AssignToListItemstyles__StyledButton>
  </AssignToListItemstyles__ListItemHeader>
  <List>
    <AssignToListItemstyles__ListItemsLabels>
      <FieldsToAssignstyles__ListItemStyled
        key="1"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 1"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
      <FieldsToAssignstyles__ListItemStyled
        key="2"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 2"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
      <FieldsToAssignstyles__ListItemStyled
        key="3"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 3"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
    </AssignToListItemstyles__ListItemsLabels>
  </List>
</AssignToListItemstyles__ListItemWrapper>
`;

exports[`Container: AssignToListItem component should render layout correctly 1`] = `
<AssignToListItemstyles__ListItemWrapper>
  <AssignToListItemstyles__ListItemHeader>
    <span />
    <AssignToListItemstyles__ListItemTitle>
      <FieldsToAssignstyles__StyledTextHighlighter
        searchTerm="mockFilter"
        text="name"
      />
    </AssignToListItemstyles__ListItemTitle>
    <AssignToListItemstyles__StyledButton
      onClick={[Function]}
      type="link"
    >
      + Add new
    </AssignToListItemstyles__StyledButton>
  </AssignToListItemstyles__ListItemHeader>
  <List>
    <AssignToListItemstyles__ListItemsLabels>
      <FieldsToAssignstyles__ListItemStyled
        key="0"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 0"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
      <FieldsToAssignstyles__ListItemStyled
        key="1"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 1"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
      <FieldsToAssignstyles__ListItemStyled
        key="2"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 2"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
      <FieldsToAssignstyles__ListItemStyled
        key="3"
      >
        <FieldsToAssignstyles__ListItemMetaStyled
          title={
            <FieldsToAssignstyles__StyledTextHighlighter
              searchTerm="mockFilter"
              text="name 3"
            />
          }
        />
      </FieldsToAssignstyles__ListItemStyled>
    </AssignToListItemstyles__ListItemsLabels>
  </List>
</AssignToListItemstyles__ListItemWrapper>
`;
